# Neuron

./: README.md  walkthrough.md
apps/backend/: alembic.ini  pyproject.toml
apps/backend/alembic/: script.py.mako
apps/backend/alembic/versions/: 7dd27c03edca_update_schema_to_match_models.py
apps/backend/app/: __init__.py  dependencies.py  main.py
apps/backend/app/middleware/: __init__.py  error_handler.py
apps/backend/app/models/: __init__.py  budget.py  stock_holding.py  transaction.py
apps/backend/app/routers/: budgets.py  health.py  imports.py  portfolio.py  transactions.py
apps/backend/app/schemas/: account.py  chat.py  dashboard.py
apps/backend/app/services/: ai_service.py  dashboard_service.py
apps/backend/app/utils/: constants.py  validators.py
apps/backend/scripts/: refresh_prices.py  seed.py
apps/backend/tests/: __init__.py  conftest.py  test_chat.py  test_dashboard.py  test_portfolio.py  test_transactions.py
apps/web/: CODEBASE_AUDIT.md  GIT_COMMIT_PLAN.md  GIT_COMMIT_README.md  IDEAL_STRUCTURE.md  UI_STRUCTURE.md  git-commit-script.sh  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/web-bff/: build.gradle.kts  serverless.yml
apps/web/e2e/: accounts.spec.ts  budget.spec.ts  chat.spec.ts  dashboard.spec.ts  (+3 more)
backend/: README.md  neuron.db  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py
backend/scripts/: import_csv.py
backend/tests/: test_accounts.py  test_budgets.py  test_imports.py
documentation/: product-brief.md
(+168 files in other folders)
